<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_product_in_list"
        android:title="@string/add_product_in_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_new_sale"
        android:title="@string/add_new_sale"
        app:showAsAction="never" />

    <item
        android:id="@+id/scan_barcode"
        android:title="@string/scan_barcode"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_location"
        android:title="@string/change_location"
        app:showAsAction="never" />
</menu>