<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:minlines="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        card_view:cardBackgroundColor="@color/sky_blue"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sky_blue"
            android:orientation="vertical"
            android:padding="0.5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/first_back"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:id="@+id/tv_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/first_tv"
                    android:textColor="@color/orange"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/sec_tv"
                    android:textColor="@color/orange"
                    android:textSize="12sp"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <!--<ImageView
                    android:id="@+id/imgv_product"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:scaleType="fitXY"
                    android:src="@mipmap/mobile_image"/>-->

                <app.abhilasha.consumity.com.consumity.Utils.ImageViewSmoothScroll
                    android:id="@+id/imgv_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:background="@android:color/white"
                    android:layout_gravity="center"
                    android:src="@mipmap/mobile_image"/>


                <ImageView
                    android:id="@+id/img_notification"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/alert_icon_on"/>


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/store_grid_view2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="4dp">


                    <TextView
                        android:id="@+id/txt_vw_brand_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/first_text"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:singleLine="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"/>

                    <TextView
                        android:id="@+id/txt_vw_online_store"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/sec_text"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/img_delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/del_on"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
